--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Shoemakers -- Fiction'
 - !lcsh 'Spain -- Fiction'
+- GITenberg
 title: Belarmino y Apolonio
 url: http://www.gutenberg.org/ebooks/14318
